--- a/car-fact-processor/pom.xml
+++ b/car-fact-processor/pom.xml
@@ -54,6 +54,11 @@
 			<version>4.3.4.RELEASE</version>
 		</dependency>
 		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+			<version>4.0.3</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
