--- a/car-fact-processor/src/main/resources/application.properties
+++ b/car-fact-processor/src/main/resources/application.properties
@@ -5,3 +5,10 @@ spring.datasource.password=pass
 
 spring.redis.host=localhost
 spring.redis.port=6379
+
+flyway.enabled=true
+flyway.schemas=galaxy_schema
+flyway.locations=classpath:db/migration
+flyway.baseline-description=Base Version
+flyway.baseline-version=1
+flyway.baseline-on-migrate=true
